Added another paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <h1>Welcome to My Web Project</h1>
-        <p>This page is part of my Git & GitHub CLI assignment.</p>
+        <p>This page is part of my Git & GitHub assignment.</p>
+        <p> I learned GitHub for the first time in this project.</p>
     </header>
 
     <main>
